<resources>
    <string name="app_name">MvApp</string>
    <string name="playing_now">Playing Now</string>
    <string name="onboard_one">Lebih Mudah Untuk Mengetahui Film Yang Sedang Tampil</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="onboardingtwo">Tidak Khawatir Ketinggalan\n Update Film Terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="onboardingthree">Gunakan E-Wallet Untuk \nTransaksi Tiket Nonton</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="nama">Nama</string>
    <string name="email">Email Address</string>
    <string name="photo">Photo</string>
    <string name="welcome">Welcome</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="simpan_dan_lanjutkan">Simpan dan Lanjutkan</string>
    <string name="title_activity_home2">Home2Act</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="storyboard">Storyboard</string>
    <string name="whos_played">Who\'s Played</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="layar_bioskop">Layar Bioskop</string>
    <string name="pilih">Pilih</string>
    <string name="penuh">Penuh</string>
    <string name="kosong">Kosong</string>
    <string name="checkout">Checkout</string>
    <string name="date"><![CDATA[Date & Time]]></string>
    <string name="cinema">Cinema</string>
    <string name="when">When</string>
    <string name="items">Items</string>
    <string name="seats1">Seat No. C1</string>
    <string name="seats2">Seat No. C2</string>
    <string name="total_bayar">Total Bayar</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="total_balance">Total Balance</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="batalkan">Batalkan</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_wallet">My Wallet</string>
    <string name="saldo_tersedia">Saldo Tersedia</string>
    <string name="data_transaksi">Data Transaksi</string>
    <string name="history">History</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lihat_tiket">Lihat Tiket</string>
    <string name="happy_watch">Happy Watch</string>
    <string name="beli_sekarang">Beli Sekarang</string>
</resources>
